# open-data-analysis

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
projects/01-visualize/population/: 01-fetch-data.ipynb  02-process-data.ipynb  README.md
projects/jinsui/: 00-fetch-data.ipynb  README.md
projects/jinsui/data/: e-stat00200524.csv
projects/jinsui/src/: _.py
projects/jinsui/src/estatapi/: __init__.py  helper.py
